@@ -25,7 +25,7 @@ ACLOCAL_AMFLAGS = -I m4
 # 'distcheck' should verify that building the examples works.
 # It would be nice to test documentation rebuilding, too, but 'distcheck'
 # doesn't like it that 'distclean' doesn't then remove the generarted docs.
-AM_DISTCHECK_CONFIGURE_FLAGS = --with-examples
+AM_DISTCHECK_CONFIGURE_FLAGS = --with-examples --with-linguist
 
 doxygen_examples = \
   misc/basic_parsing.c \
