@@ -1,4 +1,4 @@
-CIF API 0.3.0 (public release)
+CIF API 0.4.0 (public release)
 ==============================
 
 The CIF API provides a standard C interface for reading, writing, and
@@ -16,6 +16,10 @@ API library.  One of them is a text-mode CIF 2.0 file syntax checker, which
 might be of some interest.  Also, the tests (src/tests) collectively provide
 a fairly comprehensive demonstration of the API's features, though their
 primary purpose is to verify that the library works as intended.
+
+The package now includes EXPERIMENTAL program 'cif_linguist' for converting
+data between CIF formats.  This program is not well tested and is certain to
+contain bugs (though no specific bugs are known at this time).
 
 Refer to file INSTALL for general installation instructions.  Build details
 specific to this package follow:
